--- a/themes/hugo-theme-cleanwhite/layouts/_default/single.html
+++ b/themes/hugo-theme-cleanwhite/layouts/_default/single.html
@@ -42,7 +42,9 @@
                             on 
                             {{ .Date.Format "Monday, January 2, 2006" }}
                             {{ if .Site.Params.page_view_conter }}
+                            <span id="busuanzi_container_page_pv">|<span id="busuanzi_value_page_pv"></span><span>
                                 {{ partial "page_view_counter.html" . }}
+                                阅读 </span></span> | <span class="post-date">共 {{ .WordCount  }} 字</span>，阅读约 <span class="more-meta"> {{ .ReadingTime  }} 分钟</span>
                             {{ end }}
                             <!-- Don't show "Last Modified on" if update happened on the same day. -->
                             {{ if (and (not .Lastmod.IsZero) (not (eq (dateFormat "2006-01-02" .Lastmod) (dateFormat "2006-01-02" .Date)))) }}
@@ -68,7 +70,7 @@
                 col-lg-8 col-lg-offset-2
                 col-md-10 col-md-offset-1
                 post-container">
-
+    
                 <!--
                 {{ if not (eq (.Param "showtoc") false) }}
                 <header>
@@ -78,11 +80,11 @@
                 {{ end }}
                 -->
                 {{ .Content }}
-
+    
                 {{ if .Site.Params.reward }}
                 {{ partial "reward.html" . }}
                 {{ end }}
-
+    
                 {{ if or (.PrevInSection) (.NextInSection) }}
                 <hr>
                 <ul class="pager">
@@ -100,10 +102,10 @@
                     {{ end }}
                 </ul>
                 {{ end }}
-
+    
                 {{ partial "comments.html" . }}
             </div>
-
+    
             <!-- Side Catalog Container -->
             {{ if not (eq (.Param "showtoc") false) }}
             <div class="
@@ -120,13 +122,13 @@
                 </div>
             </div>
             {{ end }}
-
+    
             <!-- Sidebar Container -->
             <div class="
                 col-lg-8 col-lg-offset-2
                 col-md-10 col-md-offset-1
                 sidebar-container">
-
+    
                 <!-- Featured Tags -->
                 {{ if .Site.Params.featured_tags }}
                 <section>
@@ -144,7 +146,7 @@
                     </div>
                 </section>
                 {{ end }}
-
+    
                 <!-- Friends Blog -->
                 {{ if .Site.Params.friends }}
                 <section>
