compiler ch1; add latex

--- a/themes/hugo-theme-cleanwhite/layouts/_default/single.html
+++ b/themes/hugo-theme-cleanwhite/layouts/_default/single.html
@@ -84,6 +84,10 @@
                 {{ if .Site.Params.reward }}
                 {{ partial "reward.html" . }}
                 {{ end }}
+                
+                {{ if or .Params.math .Site.Params.math }}
+                {{ partial "math.html" . }}
+                {{ end }}
     
                 {{ if or (.PrevInSection) (.NextInSection) }}
                 <hr>
