--- a/themes/hugo-theme-cleanwhite/layouts/shortcodes/douban-card.html
+++ b/themes/hugo-theme-cleanwhite/layouts/shortcodes/douban-card.html
@@ -182,7 +182,7 @@
             <div class="douban-card--stars-rating">
               <span class="douban-card--logo-dou">豆</span><span class="douban-card--logo-rating">豆瓣评分</span>
               <span class="douban-card--stars">{{ $stars }}</span>
-              <span class="douban-card--rating">{{$rating}}</span>
+              <span class="douban-card--rating">{{$rawRating}}</span>
             </div>
             <div class="douban-card--tags">{{ index $item 2 }}</div>
             <div class="douban-card--summary">{{ index $item 5 }}</div>
